[package]
name = "process-results"
version = "0.1.0"
edition = "2018"
authors = ["Chang He"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.1", optional = true }

[dev-dependencies]
eyre = "0.6.5"
