[package]
name = "process-results"
version = "0.1.1"
edition = "2018"
authors = ["Chang He"]
license = "MIT OR Apache-2.0"
description = """process-results is a crate that provides the same functionality provided by
Itertools::process_results. It helps you process an iterator of results, with a more ergonomic
and composable interface."""
readme = "README.md"
repository = "https://github.com/changhe3/process-results"
keywords = ["iterator", "data-structure", "result"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.1", optional = true }

[dev-dependencies]
eyre = "0.6.5"
